--- a/src/main.css
+++ b/src/main.css
@@ -1,1 +1,17 @@
 @import "tailwindcss";
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 32
+}
+
+button {
+    cursor: pointer;
+}
+
+body {
+    background-color: aliceblue;
+}
